# jonashietala

./: .gitignore  .gitmodules  .prettierignore  .vale.ini  2014-read-books.markdown  404.markdown  Cargo.toml  README.markdown  README.md  TODO.md  about.markdown  blog  books.markdown  capture  edit.pl  index.html  post_editing  projects.dj  projects.html  projects.markdown  rebuild.sh  redirects  site.hs  sync  to_blog.markdown  write
.claude/: settings.local.json
css/: archive.scss  code.scss  default.css  fonts.scss  global.scss  gruvbox.scss  homepage.scss  main.scss  post-list.scss  post.scss  projects.scss  series-list.scss  series.scss  site.scss  static.scss  style.css  tags.scss
css/components/: _highlight.scss  _post_items.scss  _system.scss
css/global/: _basic.scss  _code.scss  _colors.scss  _font_size.scss  _fonts.scss  _site.scss  (+4 more)
drafts/: 0_planning_my_kubernetes_homelab.dj  1_why_kubernetes_at_home.dj  2013_in_review.markdown  2014-01-01-2014-read-books.markdown  2014-06-06-reinstalling_slackware.markdown  2014_in_review.markdown  2014_read_books.markdown  2015_in_review.markdown  2015_read_books.markdown  2016_in_review.markdown  2018_in_review.markdown  2019_in_review.markdown  2020_in_review.markdown  2021_in_review.markdown  2022_in_review.markdown  2024_in_review.dj  2025_in_review.dj  2026_the_year_of_the_linux_console.dj  2_building_a_raspberry_pi_cluster.dj  2_talos_linux_on_proxmox_with_terraform.dj  2_x_just_command_runner_documentation.dj  3_installing_k3s.dj  3_secrets_with_sops_age_and_sealed_secrets.dj  4_gitops_with_argocd.dj  4_storage_on_kubernetes.dj  5_domains_certificates_and_dns.dj  5_years_at_the_university.markdown  6_could_native_apps_with_cloud_native_postgres.dj  7_sso_with_authentik.dj  7_x_backups.dj  8_whats_next_for_my_homelab.dj  8_x_longhorn.dj  a4t_toolhead.dj  a_custom_keyboard_layout.markdown  a_first_look_at_gleam_otp.dj  a_simple_timeline_using_css_flexbox.dj  a_workweek_one_bag_travel.dj  adding_a_custom_keyboard_to_qmk.dj  back_to_whoop.dj  battling_burnout.markdown  (+144 more)
files/: cv-2012.tex  cv-2015-eng.tex
graphviz/: payment-flow.dot  test.dot
itemref-derive/: Cargo.toml
js/: main.js
keyboard_layouts/: cybershard.json  leftie.json  t34.json
plots/: asic-pit-of-despair.py
posts/: 2009-07-21-the_first_worst_post.markdown  2009-07-25-my_first_theme_addictive_gaming.markdown  2009-08-01-balls.markdown  2009-08-04-august_theme_bare_minimum.markdown  2009-08-04-postmortem_balls.markdown  2009-08-16-going_down.markdown  2009-08-19-incomplete_game_coming_up.markdown  2009-08-20-black_and_white.markdown  2009-08-21-postmortem_black_and_white.markdown  2009-08-25-going_into_being_busy_mode.markdown  2009-09-12-september_theme_failure.markdown  2009-09-20-bugger.markdown  2009-09-24-postmortem_bugger.markdown  2009-09-28-why_make_games.markdown  2009-10-01-october_theme_says_numbers.markdown  2009-10-13-an_intriguing_new_puzzle.markdown  2009-10-13-menucity.markdown  2009-10-16-menucity_level_0_walkthrough.markdown  2009-10-19-postmortem_menucity.markdown  2009-11-01-november_theme_art_game.markdown  2009-11-02-an_invisible_remake.markdown  2009-11-25-jonas_icecream_stand.markdown  2009-12-01-postmortem_jonas_icecream_stand.markdown  2009-12-04-december_theme_new_world_order.markdown  2009-12-09-the_arty_timeline.markdown  2009-12-14-breaking_the_rule_of_three.markdown  2009-12-16-pushing_toward_git.markdown  2009-12-21-now_we_have_a_forum.markdown  2010-01-01-new_year_new_theme_100_things.markdown  2010-01-16-the_chronicles_of_bim_the_100_fake_afros.markdown  2010-01-18-my_dream_game_the_rts.markdown  2010-01-19-postmortem_the_chronicles_of_bim_the_100_fake_afros.markdown  2010-01-24-why_is_my_file_so_huge.markdown  2010-02-01-february_gets_themed_rejection.markdown  2010-02-28-a_geek_valentine.markdown  2010-03-02-march_theme_10_seconds.markdown  2010-03-10-postmortem_a_geek_valentine.markdown  2010-03-25-no_game_this_month.markdown  2010-03-30-the_experimental_games.markdown  2010-04-02-death_to_the_forum.markdown  (+276 more)
projects/: 08_gh60.markdown  09_masters.markdown  10_timeedit.markdown  1_algorithms.markdown  1_timeedit.markdown  20_MARC.markdown  21_cybershard.dj  22_tree-sitter_djot.dj  23_whycrypto.markdown  24_bitpal.markdown  25_whycrypto.markdown  26_t34.markdown  30_algorithms.markdown  30_gh60.markdown  30_rqr.markdown  3_t34.dj  40_games.markdown  40_masters.markdown  43_timeedit.markdown  44_MARC.markdown  45_algorithms.markdown  4_bitpal.markdown  50_site.markdown  7_cybershard.dj  7days.markdown  8_printers.dj  MARC.markdown  algorithms.markdown  dotfiles.markdown  games.markdown  mangaprobe.markdown  rustbot.markdown  site.markdown  timelapse.markdown  treebot.markdown
pygments/: main.py  pollen.py
queries/: djot.scm
series/: cybershard.dj  extending_neovim_for_my_blog.dj  kube-homelab.dj  kubernetes.dj  making-cryptobook.markdown  t-34.markdown  voron_trident.markdown
src/: Compilers.hs  Config.hs  Contexts.hs  Pygments.hs  Render.hs  Routes.hs  context.rs  feed.rs  gen.rs  git.rs  item.rs  json_api.rs  main.rs  markup.rs  paths.rs  site.hs  site.rs  site_url.rs  tera.rs  tests.rs  upload.rs  util.rs  watch.rs
standalone/: about.dj  djottest.dj  homelab.dj  masters_thesis.markdown  now.dj  uses.dj
static/: 404.markdown  about.markdown  contact.markdown  djottest.dj  encrmsg01.txt  gpg.markdown  gpg.txt  house.markdown  masters_thesis.markdown  mdtest.markdown  recommendations.markdown  uses.dj  uses.markdown
syntaxes/: Djot.sublime-syntax  pollen.sublime-syntax  racket.sublime-syntax  syntax_set.packdump
templates/: archive.html  archive.txt  default.html  draft-item.html  draft.html  game-item.html  games.html  highlight.html  homepage.html  index.html  post-item.html  post-list.html  post.html  post_info.html  posts.html  project.html  project_info.html  projects.html  series.html  series_archive.html  series_info.html  short-post-item.txt  site.html  sitemap.xml  static.html  tags-archive.html  tags.html
test-site/: about.markdown  projects.dj  projects.markdown
todo/: 20_3d_printers.dj
(+139 files in other folders)
