[package]
name = "jonashietala_se"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1
incremental = true

[dependencies]
chrono = "0.4.19"
eyre = "0.6.8"
glob = "0.3.0"
lazy_static = "1.4.0"
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
regex = "1"
serde = "1.0"
serde_yaml = "0.9"
walkdir = "2"
yaml-front-matter = "0.1.0"
camino = "1.0.7"
tera = "1"
html-escape = "0.2.11"
syntect = { version = "5.0.0", default-features = false, features = ["html", "regex-onig", "default-syntaxes", "yaml-load", "plist-load"] }
tempfile = "3.3.0"
clap = { version = "4.0.13", features = ["derive"] }
scraper = "0.18.1"
url = "2.2.2"
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hotwatch = "0.5.0"
grass = "0.11.0"
rayon = "1.5.3"
colored = "2.0.0"
thiserror = "1.0"
itertools = "0.12.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.21"
atom_syndication = "0.12.2"
fs_extra = "1.2.0"
itemref-derive = { version = "0.1.0", path = "src/itemref-derive" }
rust-s3 = "0.33.0"
md5 = "0.7.0"
new_mime_guess = "4.0.1"
xml-rs = "0.8.19"
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
