[package]
name = "jonashietala_se"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1
incremental = true

[dependencies]
chrono = "0.4.34"
eyre = "0.6.12"
glob = "0.3.0"
lazy_static = "1.4.0"
# 0.10 breaks some things I don't care to fix, as markdown isn't used for new posts anymore.
pulldown-cmark = { version = "= 0.9.6", default-features = false, features = ["simd"] }
regex = "1"
serde = "1.0"
serde_yaml = "0.9"
walkdir = "2"
yaml-front-matter = "0.1.0"
camino = "1.0.7"
tera = "1"
html-escape = "0.2.11"
syntect = { version = "5.0.0", default-features = false, features = ["html", "regex-onig", "default-syntaxes", "yaml-load", "plist-load"] }
tempfile = "3.3.0"
clap = { version = "4.5.1", features = ["derive"] }
scraper = "0.19"
url = "2.2.2"
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hotwatch = "0.5.0"
grass = "0.13.2"
rayon = "1.9"
colored = "2.0.0"
thiserror = "1.0"
itertools = "0.12.1"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.21"
atom_syndication = "0.12.2"
fs_extra = "1.2.0"
itemref-derive = { version = "0.1.0", path = "src/itemref-derive" }
rust-s3 = "0.33.0"
md5 = "0.7.0"
new_mime_guess = "4.0.1"
xml-rs = "0.8.19"
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
jotdown = "0.3.2"
tokio-websockets = { version = "0.7.0", features = ["server", "openssl"] }
futures-util = "0.3.30"
flume = "0.11.0"
serde_json = "1.0.113"
tokio-tungstenite = "0.21.0"
pulldown-cmark-escape = "0.10.0"
axum-server = "0.6.0"
toml-frontmatter = "0.1.0"
# Note that all tree-sitter grammars needs to depend on the same tree-sitter version!
# Really annoying...
tree-sitter-highlight = "^0.22.5"
# Syntect has better Rust highlighting
# tree-sitter-rust = "0.20.4"
tree-sitter-sdjot = { git = "https://github.com/treeman/tree-sitter-sdjot.git" }
tree-sitter-djot = { git = "https://github.com/treeman/tree-sitter-djot.git" }
tree-sitter-fishshell = { git = "https://github.com/treeman/tree-sitter-fishshell.git" }
tree-sitter-fish = { git = "https://github.com/treeman/tree-sitter-fish" }
# tree-sitter-fish = { git = "https://github.com/ram02z/tree-sitter-fish.git", rev = "f9176908c" }
# tree-sitter-fish = { path = "../tree-sitter-fish" }
tree-sitter-gleam = { git = "https://github.com/treeman/tree-sitter-gleam" }

# tree-sitter-gleam = { git = "https://github.com/gleam-lang/tree-sitter-gleam.git", rev = "2012f29" }
# tree-sitter-gleam = { path = "../tree-sitter-gleam" }
# tree-sitter-toml = { path = "../tree-sitter-toml" }
tree-sitter-toml = { git = "https://github.com/treeman/tree-sitter-toml" }
tree-sitter-query = { git = "https://github.com/tree-sitter-grammars/tree-sitter-query.git" }
tree-sitter-lua = { git = "https://github.com/tree-sitter-grammars/tree-sitter-lua" }
btree-range-map = "0.7.2"
serde_repr = "0.1.19"
