[package]
name = "jonashietala_se"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1
incremental = true

[dependencies]
chrono = "0.4.34"
eyre = "0.6.12"
glob = "0.3.0"
lazy_static = "1.4.0"
pulldown-cmark = { version = "0.10.3", default-features = false, features = [
  "simd",
  "html",
] }
regex = "1"
serde = "1.0"
serde_yaml = "0.9"
walkdir = "2"
yaml-front-matter = "0.1.0"
camino = "1.0.7"
tera = "1"
html-escape = "0.2.11"
syntect = { version = "5.0.0", default-features = false, features = [
  "html",
  "regex-onig",
  "default-syntaxes",
  "yaml-load",
  "plist-load",
] }
tempfile = "3.3.0"
clap = { version = "4.5.28", features = ["derive"] }
scraper = "0.22"
url = "2.2.2"
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hotwatch = "0.5.0"
grass = "0.13.2"
rayon = "1.9"
colored = "3.0.0"
thiserror = "2.0"
itertools = { version = "0.14.0", features = ["use_alloc"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
futures = "0.3.21"
atom_syndication = "0.12.2"
fs_extra = "1.2.0"
itemref-derive = { version = "0.1.0", path = "src/itemref-derive" }
rust-s3 = "0.35.1"
md5 = "0.7.0"
new_mime_guess = "4.0.1"
xml-rs = "0.8.19"
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
jotdown = "0.7.0"
tokio-websockets = { version = "0.11.2", features = ["server", "openssl"] }
futures-util = "0.3.30"
serde_json = "1.0.113"
tokio-tungstenite = "0.26.1"
pulldown-cmark-escape = "0.10.0"
axum-server = "0.7.1"
toml-frontmatter = "0.1.0"
# Note that all tree-sitter grammars needs to depend on the same tree-sitter version!
# Really annoying...
tree-sitter = "0.25.1"
tree-sitter-highlight = "0.25.1"
# Syntect has better Rust highlighting
# tree-sitter-rust = "0.20.4"
tree-sitter-sdjot = { git = "https://github.com/treeman/tree-sitter-sdjot.git" }
tree-sitter-djot = { git = "https://github.com/treeman/tree-sitter-djot.git" }
tree-sitter-fishshell = { git = "https://github.com/treeman/tree-sitter-fishshell.git" }
tree-sitter-fish = { git = "https://github.com/treeman/tree-sitter-fish" }
# tree-sitter-fish = { git = "https://github.com/ram02z/tree-sitter-fish.git", rev = "f9176908c" }
# tree-sitter-fish = { path = "../tree-sitter-fish" }
tree-sitter-gleam = { git = "https://github.com/treeman/tree-sitter-gleam" }
# tree-sitter-gleam = { git = "https://github.com/gleam-lang/tree-sitter-gleam.git", rev = "2012f29" }
# tree-sitter-gleam = { path = "../tree-sitter-gleam" }
# tree-sitter-toml = { path = "../tree-sitter-toml" }
tree-sitter-toml = { git = "https://github.com/treeman/tree-sitter-toml" }
tree-sitter-query = { git = "https://github.com/tree-sitter-grammars/tree-sitter-query.git", rev = "f767fb0ac5e711b6d44c5e0c8d1f349687a86ce0" }
tree-sitter-lua = { git = "https://github.com/tree-sitter-grammars/tree-sitter-lua" }
tree-sitter-ghostty = { git = "https://github.com/treeman/tree-sitter-ghostty" }
# TODO better but doesn't expose the highlights
# tree-sitter-ghostty = { git = "https://github.com/bezhermoso/tree-sitter-ghostty" }
btree-range-map = "0.7.2"
serde_repr = "0.1.19"
git2 = "0.20.0"
graphviz-rust = "0.9.3"
